SPARK-2039: Keep non-encoded i18n files in source.

--- a/plugins/fastpath/src/main/resources/i18n/fastpath_i18n_lt.properties
+++ b/plugins/fastpath/src/main/resources/i18n/fastpath_i18n_lt.properties
@@ -1,61 +1,61 @@
-workgroup = Darbo grup\u0117
+workgroup = Darbo grupė
 join = Prisijungti
 logout = Atsijungti
-cobrowsing.session = Nar\u0161ymas kartu
+cobrowsing.session = Naršymas kartu
 back = Atgal
 go = Pirmyn
-duration = Trukm\u0117
+duration = Trukmė
 agents = Agentai
 date = Data
 invite.agent = Pakvietimai
 invite = Pakviesti
 transfer.to.agent = Nukreipimai
 transfer = Nukreipimas
-workgroups = Darbo grup\u0117s
-transfer.to = Nukreipti \u012f
-cancel = At\u0161aukti
+workgroups = Darbo grupės
+transfer.to = Nukreipti į
+cancel = Atšaukti
 agent  = Agentas
 visitor = Lankytojas
-email = El. pa\u0161tas
+email = El. paštas
 question = Klausimas
 start.time = Start Time
-seconds = Sekund\u017Ei\u0173
+seconds = Sekundžių
 name = Vardas
-from = Siunt\u0117jas
+from = Siuntėjas
 room = Kambarys
-message = \u017dinu&t\u0117
-number.in.queue = # eil\u0117je
-average.wait.time = Vidutin\u0117 laukimo trukm\u0117
-last.queue.activity = Paskutinis \u012fvykis eil\u0117je
-query = U\u017eklausa
+message = Žinu&tė
+number.in.queue = # eilėje
+average.wait.time = Vidutinė laukimo trukmė
+last.queue.activity = Paskutinis įvykis eilėje
+query = Užklausa
 chat.with = Pokalbis su
 
 
 
 button.logout = &Atsijungti
-button.history = \u017d&urnalai
+button.history = Ž&urnalai
 button.conference = &Grupinis pokalbis
 button.macros = &Skriptai
 button.invite = &Pakviesti
 button.transfer = &Nukreipti
-button.canned.responses = &Paruo\u0161ti atsakymai
+button.canned.responses = &Paruošti atsakymai
 button.end = &Pabaigti
-button.co.browse = &Nar\u0161yti kartu
-button.edit.canned.responses = &Redaguoti paruo\u0161tus atsakymus
-button.start.cobrowsing.session = Prad\u0117t nar\u0161ym\u0105 kartu
-button.save.note = \u012e&ra\u0161yti u\u017era\u0161\u0105
+button.co.browse = &Naršyti kartu
+button.edit.canned.responses = &Redaguoti paruoštus atsakymus
+button.start.cobrowsing.session = Pradėt naršymą kartu
+button.save.note = Į&rašyti užrašą
 button.new = &Naujas
-button.delete = &Pa\u0161alinti
-button.save = \u012e&ra\u0161yti
+button.delete = &Pašalinti
+button.save = Į&rašyti
 button.accept = &Priimti
 button.reject = &Atmesti
 
 
 checkbox.allow.user.to.follow = Leisti abonentui sekti
 
-label.notes = &U\u017era\u0161ai
-label.message.to.agent = \u017dinu&t\u0117 agentui
-label.select.agent = Pasirinkite agent\u0105
+label.notes = &Užrašai
+label.message.to.agent = Žinu&tė agentui
+label.select.agent = Pasirinkite agentą
 label.title = &Pavadinimas
 label.type = &Tipas
 label.response = &Atsakymas
@@ -63,89 +63,89 @@ label.initial.response = &Pradinis atsakymas
 
 
 
-message.workgroup.logged.into = Prisijung\u0119s prie {0} darbo grup\u0117s
+message.workgroup.logged.into = Prisijungęs prie {0} darbo grupės
 message.incoming.request = {0}
-message.start.cobrowsing = Prad\u0117t nar\u0161ym\u0105 kartu puslapyje {0}
-message.send.cobrowsing.message = Nusi\u0173stas pakvietimas nar\u0161yti kartu puslapyje {0}
-message.click.to.add.notes = Paspauskite \u010dia, kad prid\u0117ti u\u017era\u0161us.
-message.chat.notes = Pokalbio u\u017era\u0161ai yra priskirti \u0161iam pokalbiui ir juos galima bus rasti pokalbio paie\u0161koje.
-message.notes.updated = U\u017era\u0161ai buvo atnaujinti
-message.unable.to.update.notes = Ne\u012fmanoma i\u0161saugoti u\u017era\u0161o. Pra\u0161ome bandyti dar kart\u0105.
-message.view.more.information = Per\u017ei\u016br\u0117ti daugiau informacijos...
+message.start.cobrowsing = Pradėt naršymą kartu puslapyje {0}
+message.send.cobrowsing.message = Nusiųstas pakvietimas naršyti kartu puslapyje {0}
+message.click.to.add.notes = Paspauskite čia, kad pridėti užrašus.
+message.chat.notes = Pokalbio užrašai yra priskirti šiam pokalbiui ir juos galima bus rasti pokalbio paieškoje.
+message.notes.updated = Užrašai buvo atnaujinti
+message.unable.to.update.notes = Neįmanoma išsaugoti užrašo. Prašome bandyti dar kartą.
+message.view.more.information = Peržiūrėti daugiau informacijos...
 message.conversation.transferred = Pokalbis buvo nukreiptas.
-message.invitation.rejected = {0} atmet\u0117 pakvietim\u0105 \u012f pokalb\u012f.
-message.please.join.me.in.conference = Pra\u0161au prisijungi prie man\u0119s konferecijoje
-message.user.has.been.invited = {0} buvo pakviestas prisijungti prie \u0161io pokalbio.
-message.waiting.for.user = Laukiama kol {0} patvirtins \u0161\u012f nukreipim\u0105.
-message.transfering.to.user = Nukreipiu \u0161\u012f pokalb\u012f jums.
-message.join.me.in.chat = Pra\u0161au prisijungi prie man\u0119s \u0161iame pokalbyje.
-message.transfer.to.another.agent =Nukreipti \u0161\u012f pokalb\u012f \u012f kit\u0105 agent\u0105, darbo grup\u0119 ar eil\u0119.
-message.invite.another.agent = Pakviesti kitus prisijungti prie \u0161io pokalbio.
+message.invitation.rejected = {0} atmetė pakvietimą į pokalbį.
+message.please.join.me.in.conference = Prašau prisijungi prie manęs konferecijoje
+message.user.has.been.invited = {0} buvo pakviestas prisijungti prie šio pokalbio.
+message.waiting.for.user = Laukiama kol {0} patvirtins šį nukreipimą.
+message.transfering.to.user = Nukreipiu šį pokalbį jums.
+message.join.me.in.chat = Prašau prisijungi prie manęs šiame pokalbyje.
+message.transfer.to.another.agent =Nukreipti šį pokalbį į kitą agentą, darbo grupę ar eilę.
+message.invite.another.agent = Pakviesti kitus prisijungti prie šio pokalbio.
 message.no.agent.selected.error = Nebuvo pasirinktas agentas
-message.jid.invalid.error = \u012eveskite teising\u0105 identifikatori\u0173 (JID)
-message.message.required.error = \u012eveskite \u017einut\u0119
+message.jid.invalid.error = Įveskite teisingą identifikatorių (JID)
+message.message.required.error = Įveskite žinutę
 message.specify.personal.macros = Nustatykite asmeninius skriptus naudojimui pokalbiuose su klientais.
-message.macros.not.saved = J\u016bs\u0173 skriptai nebuvo i\u0161saugoti.
-message.add.new.response = Prid\u0117ti nauj\u0105 atsakym\u0105
+message.macros.not.saved = Jūsų skriptai nebuvo išsaugoti.
+message.add.new.response = Pridėti naują atsakymą
 message.current.chats = Vykstantys pokalbiai ({0})
-message.transcript.not.found.error = Pokalbio \u017eurnalas nerastas
-message.incoming.chat.request = \u012eeinanti u\u017eklausa i\u0161 {0}
-message.user.joined.room = {0} apsilank\u0117 kambaryje.
-message.user.left.room = {0} i\u0161\u0117jo i\u0161 kambario.
+message.transcript.not.found.error = Pokalbio žurnalas nerastas
+message.incoming.chat.request = Įeinanti užklausa iš {0}
+message.user.joined.room = {0} apsilankė kambaryje.
+message.user.left.room = {0} išėjo iš kambario.
 message.not.specified = Nenurodyta
-message.user.not.logged.in = Abonentas neprisijung\u0119s prie darbo grup\u0117s.
-message.agent.is.not.in.chat = \u0160iuo metu agentas nedalyvauja pokalbiuose.
-message.find.previous.conversations = \u012eveskite tekst\u0105 norim\u0105 rasti buvusiuose pokalbiuose.
+message.user.not.logged.in = Abonentas neprisijungęs prie darbo grupės.
+message.agent.is.not.in.chat = Šiuo metu agentas nedalyvauja pokalbiuose.
+message.find.previous.conversations = Įveskite tekstą norimą rasti buvusiuose pokalbiuose.
 
-menuitem.global.canned.responses = Bendri paruo\u0161ti atsakymai
-menuitem.no.entries = Kategorijoje n\u0117ra \u012fra\u0161\u0173
+menuitem.global.canned.responses = Bendri paruošti atsakymai
+menuitem.no.entries = Kategorijoje nėra įrašų
 menuitem.join.chat = Prisijungti prie pokalbio
-menuitem.monitor.chat = Steb\u0117ti pokalb\u012f
+menuitem.monitor.chat = Stebėti pokalbį
 
 tab.fastpath = Fastpath
 tab.current.chats = Vykstantys pokalbiai
-tab.online.agents = Prisijung\u0119 agentai
+tab.online.agents = Prisijungę agentai
 tab.user.info = Abonento informacija
 tab.participants Dalyviai
-tab.user.history = Abonento \u017eurnalas
-tab.notes = U\u017era\u0161ai
-tab.queue.activity = Eil\u0117s b\u016bsena
-tab.transcript = Pokalbio \u017eurnalas
+tab.user.history = Abonento žurnalas
+tab.notes = Užrašai
+tab.queue.activity = Eilės būsena
+tab.transcript = Pokalbio žurnalas
 
-title.cobrowsing.for = Nar\u0161ymas kartu su {0}
-title.chat.notes = Pokalbio u\u017era\u0161ai
-title.notes = U\u017era\u0161ai
-title.request.information = U\u017eklausos informacija
+title.cobrowsing.for = Naršymas kartu su {0}
+title.chat.notes = Pokalbio užrašai
+title.notes = Užrašai
+title.request.information = Užklausos informacija
 title.information = Informacija
-title.transcript = Pokalbio \u017eurnalas
+title.transcript = Pokalbio žurnalas
 title.transfer = Nukreipimas
 title.invitation = Pakvietimas
 title.error = Klaida
-title.contact.list = Adresat\u0173 s\u0105ra\u0161as
+title.contact.list = Adresatų sąrašas
 title.personal.macros = Asmeniniai skriptai
 title.response.name = Atsakymo pavadinimas
 title.response.text = Atsakymo tekstas
 title.personal = Asmeniniai
-title.create.canned.response = Sukurti paruo\u0161t\u0105 atsakym\u0105
-title.previous.chats = \u012evyk\u0119 pokalbiai
+title.create.canned.response = Sukurti paruoštą atsakymą
+title.previous.chats = Įvykę pokalbiai
 title.personal.chats = Asmeniniai pokalbiai
-title.chat.transcript = Pokalbio \u017eurnalas
+title.chat.transcript = Pokalbio žurnalas
 title.current.active.conversations = Vykstantys pokalbiai
 title.number.of.active.conversations = # vyksantys pokalbiai
 title.current.conversations = Vykstantys pokalbiai
 title.fastpath.invitation = Fastpath pakvietimas
 title.fastpath.transfer = Fastpath nukreipimas
-title.workgroup = {0} darbo grup\u0117
-title.chat.transcripts = Pokalbi\u0173 \u017eurnalai
-title.search.results = Paie\u0161kos rezultatai
-title.chat.transcripts.search = Paie\u0161ka pokalbi\u0173 \u017eurnaluose
-title.number.of.conversations.found = # rast\u0173 pokalbi\u0173:
+title.workgroup = {0} darbo grupė
+title.chat.transcripts = Pokalbių žurnalai
+title.search.results = Paieškos rezultatai
+title.chat.transcripts.search = Paieška pokalbių žurnaluose
+title.number.of.conversations.found = # rastų pokalbių:
 
 
-tooltip.allow.cobrowsing = Leid\u017eia \u0161iam lankytojui sekti j\u016bs\u0173 nar\u0161ym\u0105.
-tooltip.hide.cobrowsing = Pasl\u0117pia j\u016bs\u0173 nar\u0161ym\u0105 nuo \u0161io lankytojo.
-tooltip.back.one.page = Gr\u012f\u017eti \u012f buvus\u012f puslap\u012f
-tooltip.push.url = Nusi\u0173sti nuorod\u0105
-tooltip.push.current.page = Nusi\u0173sti esam\u0105 nuorod\u0105 lankytojui
-tooltip.save.transcript = \u012era\u0161yti pokalbio \u017eurnal\u0105
-tooltip.print.transcript = Atspausdinti pokalbio \u017eurnal\u0105
+tooltip.allow.cobrowsing = Leidžia šiam lankytojui sekti jūsų naršymą.
+tooltip.hide.cobrowsing = Paslėpia jūsų naršymą nuo šio lankytojo.
+tooltip.back.one.page = Grįžti į buvusį puslapį
+tooltip.push.url = Nusiųsti nuorodą
+tooltip.push.current.page = Nusiųsti esamą nuorodą lankytojui
+tooltip.save.transcript = Įrašyti pokalbio žurnalą
+tooltip.print.transcript = Atspausdinti pokalbio žurnalą
