--- a/plugins/flashing/src/main/resources/i18n/flashing_i18n_fr.properties
+++ b/plugins/flashing/src/main/resources/i18n/flashing_i18n_fr.properties
@@ -1,4 +1,4 @@
-title.flashing = Clignotement de la barre des t\u00E2ches
+title.flashing = Clignotement de la barre des tâches
 
 flashing.enable = &Activer le clignotement
 flashing.type = &Taper
