--- a/plugins/flashing/src/main/resources/i18n/flashing_i18n_lt.properties
+++ b/plugins/flashing/src/main/resources/i18n/flashing_i18n_lt.properties
@@ -1,6 +1,6 @@
-title.flashing = Mirg\u0117jimas 
+title.flashing = Mirgėjimas 
 
-flashing.enable = \u012ejungti informacin\u012f mirg\u0117jim\u0105 u\u017eduo\u010di\u0173 juostoje
-flashing.type = B\u016bdas
-flashing.type.continuous = Mirg\u0117ti be galo
-flashing.type.temporary = Pamirg\u0117jus nustoti
+flashing.enable = Įjungti informacinį mirgėjimą užduočių juostoje
+flashing.type = Būdas
+flashing.type.continuous = Mirgėti be galo
+flashing.type.temporary = Pamirgėjus nustoti
