--- a/plugins/flashing/src/main/resources/i18n/flashing_i18n_pl.properties
+++ b/plugins/flashing/src/main/resources/i18n/flashing_i18n_pl.properties
@@ -1,6 +1,6 @@
-title.flashing = Migotanie paska zada\u0144
+title.flashing = Migotanie paska zadań
 
-flashing.enable = W\u0142\u0105cz migotanie paska zada\u0144
+flashing.enable = Włącz migotanie paska zadań
 flashing.type = Rodzaj migotania
-flashing.type.continuous = Ci\u0105g\u0142y
+flashing.type.continuous = Ciągły
 flashing.type.temporary = Tymczasowy
