--- a/plugins/roar/src/main/resources/i18n/roar_i18n_pl.properties
+++ b/plugins/roar/src/main/resources/i18n/roar_i18n_pl.properties
@@ -2,35 +2,35 @@
 # Plik jezykowy Panelu ROAR
 
 roar.settings = Ustawienia ROAR
-roar.enabled = W\u0142\u0105cz wyskakuj\u0105ce powiadomienia
+roar.enabled = Włącz wyskakujące powiadomienia
 roar.duration = Czas trwania w ms (0 = bez limitu):
-roar.amount = Maksymalna ilo\u015b\u0107 powiadomie\u0144 na ekranie (0 = bez limitu):
-roar.location = Zmiana miejsca wyskakuj\u0105cych powiadomie\u0144 (wymagany restart)
-roar.display.topright = G\u00F3rna prawa
+roar.amount = Maksymalna ilość powiadomień na ekranie (0 = bez limitu):
+roar.location = Zmiana miejsca wyskakujących powiadomień (wymagany restart)
+roar.display.topright = Górna prawa
 roar.display.bottomright = Dolna prawa
-roar.background = Kolor t\u0142a
-roar.background.group = Kolor t\u0142a multi u\u017cytkownika
-roar.background.keyword = Kolor t\u0142a s\u0142\u00f3w kluczowych
-roar.header = Kolor nag\u0142\u00F3wka
-roar.header.group = Kolor nag\u0142\u00F3wka multi u\u017cytkownika
-roar.header.keyword = Kolor nag\u0142\u00F3wka s\u0142\u00f3w kluczowych
+roar.background = Kolor tła
+roar.background.group = Kolor tła multi użytkownika
+roar.background.keyword = Kolor tła słów kluczowych
+roar.header = Kolor nagłówka
+roar.header.group = Kolor nagłówka multi użytkownika
+roar.header.keyword = Kolor nagłówka słów kluczowych
 roar.text = Kolor tekstu
-roar.text.group = Kolor tekstu multi u\u017cytkownika
-roar.text.keyword = Kolor tekstu s\u0142\u00f3w kluczowych
+roar.text.group = Kolor tekstu multi użytkownika
+roar.text.keyword = Kolor tekstu słów kluczowych
 
-roar.single = Pojedynczy U\u017cytkownik
-roar.single.disable = Wy\u0142\u0105cz Roar dla czat\u00f3w pojedynczego u\u017cytkownika
-roar.group = Multi U\u017cytkownik
-roar.group.different = U\u017cywaj r\u00f3\u017cnych ustawie\u0144 dla czat\u00f3w multi u\u017cytkownika
-roar.group.disable = Wy\u0142\u0105cz Roar dla czat\u00f3w multi u\u017cytkownika
-roar.keyword = Dopasowanie s\u0142\u00f3w kluczowych
-roar.keyword.different = U\u017cywaj r\u00f3\u017cnych ustawie\u0144 dla dopasowania s\u0142\u00f3w kluczowych
-roar.keyword.keyword = S\u0142owa kluczowe (oddzielone przecinkami)
+roar.single = Pojedynczy Użytkownik
+roar.single.disable = Wyłącz Roar dla czatów pojedynczego użytkownika
+roar.group = Multi Użytkownik
+roar.group.different = Używaj różnych ustawień dla czatów multi użytkownika
+roar.group.disable = Wyłącz Roar dla czatów multi użytkownika
+roar.keyword = Dopasowanie słów kluczowych
+roar.keyword.different = Używaj różnych ustawień dla dopasowania słów kluczowych
+roar.keyword.keyword = Słowa kluczowe (oddzielone przecinkami)
 
 roar.display.system = Powiadomienia systemu operacyjnego
 
-roar.warning.topright = Niestandardowe style powiadamiania. W pe\u0142ni konfigurowalne.
-roar.warning.bottomright = Niestandardowe style powiadamiania. W pe\u0142ni konfigurowalne.
-roar.warning.toaster = Style powiadamiania Sparka. Kolory <u>nie s\u0105</u> konfigurowalne.
-roar.warning.system = Powiadamiania zale\u017cne od systemu. Kolory i czas trwania <u>nie s\u0105</u> konfigurowalne.
-roar.warning.system.mac = U\u017cywanie Centrum Powiadamiania (OSX 10.8 i powy\u017cej). <br>Kolory i czas trwania <u>nie s\u0105</u> konfigurowalne.<br>Zobacz ustawienia systemu Mac -&gt; Notifications for more settings.
+roar.warning.topright = Niestandardowe style powiadamiania. W pełni konfigurowalne.
+roar.warning.bottomright = Niestandardowe style powiadamiania. W pełni konfigurowalne.
+roar.warning.toaster = Style powiadamiania Sparka. Kolory <u>nie są</u> konfigurowalne.
+roar.warning.system = Powiadamiania zależne od systemu. Kolory i czas trwania <u>nie są</u> konfigurowalne.
+roar.warning.system.mac = Używanie Centrum Powiadamiania (OSX 10.8 i powyżej). <br>Kolory i czas trwania <u>nie są</u> konfigurowalne.<br>Zobacz ustawienia systemu Mac -&gt; Notifications for more settings.
