--- a/plugins/sip/src/main/java/org/jivesoftware/spark/plugin/phone/resource/sip_spark_i18n_lt.properties
+++ b/plugins/sip/src/main/java/org/jivesoftware/spark/plugin/phone/resource/sip_spark_i18n_lt.properties
@@ -28,89 +28,89 @@
 
 phone.starting = Telefonas startuoja...
 phone.failed = Nepavyko paleist telefono
-phone.tryagain = Bandykit dar kart\u0105
+phone.tryagain = Bandykit dar kartą
 phone.call = Skambutis
-phone.voicemail = Balso pa\u0161tas
-phone.viewcallhistory = Per\u017ei\u016br\u0117ti skambu\u010di\u0173 istorij\u0105
+phone.voicemail = Balso paštas
+phone.viewcallhistory = Peržiūrėti skambučių istoriją
 phone.placecall = Paskambinti telefonu
-phone.hangup = U\u017ebaigti skambut\u012f
-phone.tips.hangup = Nutraukt telefono pokalb\u012f
+phone.hangup = Užbaigti skambutį
+phone.tips.hangup = Nutraukt telefono pokalbį
 phone.home = Namai
 phone.work = Darbas
 phone.cell = Mobilus
 phone.currentcall = Einamasis skambutis
-phone.incomingcall = \u012eeinantis skambutis
-phone.noprevious = Prie\u0161 tai pokalbi\u0173 nebuvo
+phone.incomingcall = Įeinantis skambutis
+phone.noprevious = Prieš tai pokalbių nebuvo
 phone.callended = Skambutis nutruko
 phone.transferto = Skambutis peradresuotas
 phone.connected = Susijungta
-phone.lastcalled = Paskutin\u012f kart\u0105 skambinta
+phone.lastcalled = Paskutinį kartą skambinta
 phone.never = Niekada
-phone.duration = Trukm\u0117
+phone.duration = Trukmė
 phone.accept = Priimti
 phone.reject = Atsisakyti
 phone.callback = Perskambinti
-phone.delete = I\u0161trinti
-phone.enternumber = \u012eveskite numer\u012f skambu\u010diui
+phone.delete = Ištrinti
+phone.enternumber = Įveskite numerį skambučiui
 phone.invalidnumber = Neteisingas numeris
-phone.outgoingcall = I\u0161einantis skambutis
-phone.callhistory = Skambu\u010di\u0173 istorija
+phone.outgoingcall = Išeinantis skambutis
+phone.callhistory = Skambučių istorija
 phone.dialed = Skambinta
 phone.dialedcalls = Rinkti numeriai
 phone.received = Gauta
-phone.receivedcalls = Gauti skambu\u010diai
+phone.receivedcalls = Gauti skambučiai
 phone.missed = Praleista
-phone.missedcalls = Praleisti skambu\u010diai
-phone.unknown = Ne\u017einomas
+phone.missedcalls = Praleisti skambučiai
+phone.unknown = Nežinomas
 phone.placecallto = Paskambinta
-phone.receivedcallfrom = Skambutis gautas i\u0161
+phone.receivedcallfrom = Skambutis gautas iš
 phone.missedcallfrom = Praleistas skambutis nuo
-phone.incomingcallfrom = \u012eeinantis skambutis nuo
+phone.incomingcallfrom = Įeinantis skambutis nuo
 phone.contactdetails = Adresato informacija
-phone.noinfo = N\u0117ra informacijos
-phone.viewfullprofile = Per\u017ei\u016breti piln\u0105 profil\u012f
-phone.tips.mute = Nutildinti \u0161\u012f skambut\u012f
+phone.noinfo = Nėra informacijos
+phone.viewfullprofile = Peržiūreti pilną profilį
+phone.tips.mute = Nutildinti šį skambutį
 phone.mute = Nutildinti
-phone.unmute = Nuimti nutildinim\u0105
-phone.tips.hold = Perjungti \u0161\u012f skambut\u012f \u012f laukimo b\u016bsen\u0105
+phone.unmute = Nuimti nutildinimą
+phone.tips.hold = Perjungti šį skambutį į laukimo būseną
 phone.hold = Laukti
-phone.onhold = Laukimo b\u016bsenoje
+phone.onhold = Laukimo būsenoje
 phone.time = Laikas
-phone.tips.transfer = Peradresuoti \u0161\u012f skambut\u012f
+phone.tips.transfer = Peradresuoti šį skambutį
 phone.transfer = Peradresuoti
 phone.transferring = Skambutis peradresuojamas
 phone.transfered = Skambutis peradresuotas
-phone.callstartedat = Pokalbis prad\u0117tas
+phone.callstartedat = Pokalbis pradėtas
 phone.callendedat = Pokalbis baigtas
 phone.onphonewith = Kalba telefonu su
-phone.callendedwith = Baig\u0117si pokalbis su
+phone.callendedwith = Baigėsi pokalbis su
 phone.previousconversations = Senesni pokalbiai
-phone.closeconfirm = U\u017edarius \u0161\u012f kambar\u012f, pokalbis bus nutrauktas. T\u0119sti?
+phone.closeconfirm = Uždarius šį kambarį, pokalbis bus nutrauktas. Tęsti?
 phone.confirmation = Patvirtinimas
 phone.all = Visi
-phone.allcalls = Visi skambu\u010diai
+phone.allcalls = Visi skambučiai
 phone.tocall = Skambinti
-phone.enabled = Telefonas \u012fjungtas
-btn.add = Prid\u0117ti
+phone.enabled = Telefonas įjungtas
+btn.add = Pridėti
 btn.edit = Redaguoti
-btn.del = I\u0161trinti
+btn.del = Ištrinti
 btn.dial = Skambinti
 book.name = Vardas
 book.number = Numeris
-frame.title = Telefon\u0173 knyga
-book.search = Paie\u0161ka
+frame.title = Telefonų knyga
+book.search = Paieška
 btn.ok = Gerai
-btn.cancel  = At\u0161aukti
-frame.add = "Prid\u0117ti \u012fra\u0161\u0105"
-frame.edit = "Redaguoti \u012fra\u0161\u0105"
-book.exists = "Telefon\u0173 knygos \u012fra\u012fas, kur\u012f j\u016bs norite prid\u0117ti, jau egzistuoja."
-book.noEntry = "Nepasirinktas \u012fra\u012fas!"
-book.fillFields = "Pra\u012fome u\u017epildyti visus laukus"
-book.warning = "D\u0117mesio"
+btn.cancel  = Atšaukti
+frame.add = "Pridėti įrašą"
+frame.edit = "Redaguoti įrašą"
+book.exists = "Telefonų knygos įraįas, kurį jūs norite pridėti, jau egzistuoja."
+book.noEntry = "Nepasirinktas įraįas!"
+book.fillFields = "Praįome užpildyti visus laukus"
+book.warning = "Dėmesio"
 title.sip.codecs.title = Kodekai
-codecs.select = \u21E6 Pasirinkti
-codecs.unselect = I\u0161mesti \u21E8
-codecs.up = Vir\u0161un \u21E7
-codecs.down = \u017Demyn \u21E9
+codecs.select = ⇦ Pasirinkti
+codecs.unselect = Išmesti ⇨
+codecs.up = Viršun ⇧
+codecs.down = Žemyn ⇩
 codecs.audio.selected = Pasirinkti garso kodekai
 codecs.audio.avail	= Turimi garso kodekai
