--- a/plugins/sip/src/main/java/org/jivesoftware/spark/plugin/phone/resource/sip_spark_i18n_pl.properties
+++ b/plugins/sip/src/main/java/org/jivesoftware/spark/plugin/phone/resource/sip_spark_i18n_pl.properties
@@ -27,90 +27,90 @@
 ##
 
 phone.starting = Uruchamianie telefonu...
-phone.failed = B\u0142\u0105d uruchomienia telefonu
-phone.tryagain = Spr\u00F3buj ponownie
-phone.call = Dzwo\u0144
-phone.voicemail = Wiadomo\u015B\u0107 g\u0142osowa
-phone.viewcallhistory = Przegl\u0105dnij histori\u0119 rozm\u00F3w
-phone.placecall = Dzwo\u0144.
-phone.hangup = Od\u0142\u00F3\u017C s\u0142uchawk\u0119
-phone.tips.hangup = Zako\u0144cz rozmow\u0119 telefoniczn\u0105
+phone.failed = Błąd uruchomienia telefonu
+phone.tryagain = Spróbuj ponownie
+phone.call = Dzwoń
+phone.voicemail = Wiadomość głosowa
+phone.viewcallhistory = Przeglądnij historię rozmów
+phone.placecall = Dzwoń.
+phone.hangup = Odłóż słuchawkę
+phone.tips.hangup = Zakończ rozmowę telefoniczną
 phone.home = Dom
 phone.work = Praca
-phone.cell = Kom\u00F3rka
-phone.currentcall = Bie\u017C\u0105ce po\u0142\u0105czenie
-phone.incomingcall = Przychodz\u0105ce po\u0142\u0105czenie
-phone.noprevious = Brak wcze\u015Bniejszych rozm\u00F3w.
-phone.callended = Po\u0142\u0105czenie zako\u0144czono
-phone.transferto = Po\u0142\u0105czenie przekazano do
-phone.connected = Po\u0142\u0105czono
-phone.lastcalled = Ostatni dzwoni\u0105cy
+phone.cell = Komórka
+phone.currentcall = Bieżące połączenie
+phone.incomingcall = Przychodzące połączenie
+phone.noprevious = Brak wcześniejszych rozmów.
+phone.callended = Połączenie zakończono
+phone.transferto = Połączenie przekazano do
+phone.connected = Połączono
+phone.lastcalled = Ostatni dzwoniący
 phone.never = Nigdy
 phone.duration = Czas trwania
 phone.accept = Akceptuj
-phone.reject = Odrzu\u0107
-phone.callback = Oddzwo\u0144
-phone.delete = Usu\u0144
+phone.reject = Odrzuć
+phone.callback = Oddzwoń
+phone.delete = Usuń
 phone.enternumber = Podaj numer telefonu.
 phone.invalidnumber = Niepoprawny numer
-phone.outgoingcall = Po\u0142\u0105czenie wychodz\u0105ce do
-phone.callhistory = Historia rozm\u00F3w
+phone.outgoingcall = Połączenie wychodzące do
+phone.callhistory = Historia rozmów
 phone.dialed = Wybrany
-phone.dialedcalls = Wybrane po\u0142\u0105czenia
+phone.dialedcalls = Wybrane połączenia
 phone.received = Odebrane
-phone.receivedcalls = Odebrane po\u0142\u0105czenia
+phone.receivedcalls = Odebrane połączenia
 phone.missed = Nieodebrane
-phone.missedcalls = Nieodebrane po\u0142\u0105czenia
+phone.missedcalls = Nieodebrane połączenia
 phone.unknown = Nieznane
 phone.placecallto = Dzwoniono do
-phone.receivedcallfrom = Odebrane po\u0142\u0105czenie od
-phone.missedcallfrom = Nieodebrane po\u0142\u0105czenie od
-phone.incomingcallfrom = Przychodz\u0105ce po\u0142\u0105czenie od
-phone.contactdetails = Szczeg\u00F3\u0142y kontaktu
-phone.noinfo = Brak dost\u0119pnych informacji
-phone.viewfullprofile = Zobacz pe\u0142ny profil
-phone.tips.mute = Wycisz te po\u0142\u0105czenie
+phone.receivedcallfrom = Odebrane połączenie od
+phone.missedcallfrom = Nieodebrane połączenie od
+phone.incomingcallfrom = Przychodzące połączenie od
+phone.contactdetails = Szczegóły kontaktu
+phone.noinfo = Brak dostępnych informacji
+phone.viewfullprofile = Zobacz pełny profil
+phone.tips.mute = Wycisz te połączenie
 phone.mute = Wycisz
-phone.unmute = W\u0142\u0105cz d\u017Awi\u0119k
-phone.tips.hold = Zawie\u015B obecne po\u0142\u0105czenie odbieraj\u0105c oczekuj\u0105ce
+phone.unmute = Włącz dźwięk
+phone.tips.hold = Zawieś obecne połączenie odbierając oczekujące
 phone.hold = Wstrzymaj
 phone.onhold = Wstrzymane
 phone.time = Czas
-phone.tips.transfer = Przeka\u017C to po\u0142\u0105czenie
+phone.tips.transfer = Przekaż to połączenie
 phone.transfer = Przekaz
-phone.transferring = Przekazuj\u0119
+phone.transferring = Przekazuję
 phone.transfered = Przekazano
-phone.callstartedat = Po\u0142\u0105czenie rozpocz\u0119to o 
-phone.callendedat = Po\u0142\u0105czenie zako\u0144czono o
-phone.onphonewith = po\u0142\u0105czenie z
-phone.callendedwith = Zako\u0144czono po\u0142\u0105czenie z
+phone.callstartedat = Połączenie rozpoczęto o 
+phone.callendedat = Połączenie zakończono o
+phone.onphonewith = połączenie z
+phone.callendedwith = Zakończono połączenie z
 phone.previousconversations = Poprzednie rozmowy
-phone.closeconfirm = Zamkni\u0119cie pokoju zako\u0144czy po\u0142\u0105czenie. Kontynuowa\u0107?
+phone.closeconfirm = Zamknięcie pokoju zakończy połączenie. Kontynuować?
 phone.confirmation = Potwierdzenie
 phone.all = Wszystkie
-phone.allcalls = Wszystkie po\u0142\u0105czenia
-phone.tocall = Po\u0142\u0105cz
-phone.enabled = Telefon w\u0142\u0105czony
+phone.allcalls = Wszystkie połączenia
+phone.tocall = Połącz
+phone.enabled = Telefon włączony
 btn.add  	= Dodaj
 btn.edit 	= Edytuj
-btn.del  	= Usu\u0144
-btn.dial	= Zadzwo\u0144
+btn.del  	= Usuń
+btn.dial	= Zadzwoń
 book.name 	= Nazwa
 book.number = Numer
-frame.title	= Ksi\u0105\u017Cka telefoniczna
+frame.title	= Książka telefoniczna
 book.search = Szukaj
 btn.ok      = OK
 btn.cancel  = Anuluj
 frame.add 	= "Dodaj wpis"
 frame.edit 	= "Edytuj wpis"
-book.exists		= "Wpis, kt\u00F3ry chcesz doda\u0107 ju\u017C istnieje."
-book.noEntry	= "Brak wybranych wpis\u00F3w!"
-book.fillFields = "Prosz\u0119 wype\u0142ni\u0107 wszystkie pola"
+book.exists		= "Wpis, który chcesz dodać już istnieje."
+book.noEntry	= "Brak wybranych wpisów!"
+book.fillFields = "Proszę wypełnić wszystkie pola"
 book.warning	= "Uwaga"
 title.sip.codecs.title = Kodeki
-codecs.select 	= \u21E6 Zaznacz
-codecs.unselect = Odznacz \u21E8
-codecs.up		= W g\u00F3r\u0119 \u21E7
-codecs.down		= W d\u00F3\u0142 \u21E9
-codecs.audio.selected	= Wybierz kodeki d\u017Awi\u0119ku
-codecs.audio.avail		= Dost\u0119pne kodeki d\u017Awi\u0119ku
+codecs.select 	= ⇦ Zaznacz
+codecs.unselect = Odznacz ⇨
+codecs.up		= W górę ⇧
+codecs.down		= W dół ⇩
+codecs.audio.selected	= Wybierz kodeki dźwięku
+codecs.audio.avail		= Dostępne kodeki dźwięku
