--- a/plugins/sip/src/main/java/org/jivesoftware/spark/plugin/phone/resource/sip_spark_i18n_zh_TW.properties
+++ b/plugins/sip/src/main/java/org/jivesoftware/spark/plugin/phone/resource/sip_spark_i18n_zh_TW.properties
@@ -26,90 +26,90 @@
 ## quote the "{" (curly brace) if necessary. A real single quote is represented by ''.
 ##
 
-phone.starting = \u958b\u555f\u901a\u8a71\u4e2d...
-phone.failed = \u958b\u555f\u901a\u8a71\u5931\u6557
-phone.tryagain = \u91cd\u8a66
-phone.call = \u547c\u53eb
-phone.voicemail = \u8a9e\u97f3\u90f5\u4ef6
-phone.viewcallhistory = \u67e5\u770b\u901a\u8a71\u7d00\u9304
-phone.placecall = \u64a5\u6253\u96fb\u8a71
-phone.hangup = \u7d50\u675f\u901a\u8a71
-phone.tips.hangup = \u639b\u6389\u6b64\u901a\u8a9e\u97f3\u804a\u5929
-phone.home = \u9996\u9801
-phone.work = \u5de5\u4f5c
-phone.cell = \u5143\u4ef6
-phone.currentcall = \u76ee\u524d\u547c\u53eb
-phone.incomingcall = \u4f86\u96fb
-phone.noprevious = \u6c92\u6709\u4ee5\u524d\u7684\u5c0d\u8a71.
-phone.callended = \u901a\u8a71\u7d50\u675f
-phone.transferto = \u8f49\u63a5\u96fb\u8a71\u5230
-phone.connected = \u9023\u63a5
-phone.lastcalled = \u6700\u5f8c\u901a\u8a71
-phone.never = \u5f9e\u672a
-phone.duration = \u6301\u7e8c\u6642\u9593
-phone.accept = \u63a5\u53d7
-phone.reject = \u62d2\u7d55
-phone.callback = \u56de\u8986\u96fb\u8a71
-phone.delete = \u522a\u9664
-phone.enternumber = \u8f38\u5165\u8981\u64a5\u6253\u7684\u865f\u78bc.
-phone.invalidnumber = \u7121\u6548\u7684\u865f\u78bc
-phone.outgoingcall = \u5df2\u64a5\u51fa
-phone.callhistory = \u901a\u8a71\u7d00\u9304
-phone.dialed = \u5df2\u64a5
-phone.dialedcalls = \u5df2\u64a5\u96fb\u8a71
-phone.received = \u63a5\u807d
-phone.receivedcalls = \u63a5\u807d\u96fb\u8a71
-phone.missed = \u6f0f\u63a5
-phone.missedcalls = \u6f0f\u63a5\u96fb\u8a71
-phone.unknown = \u4e0d\u660e\u96fb\u8a71
-phone.placecallto = \u5df2\u64a5\u96fb\u8a71\u5230
-phone.receivedcallfrom = \u5f9e\u54ea\u88e1\u63a5\u5230\u96fb\u8a71
-phone.missedcallfrom = \u5f9e\u54ea\u88e1\u6f0f\u63a5\u96fb\u8a71
-phone.incomingcallfrom = \u5f9e\u54ea\u88e1\u4f86\u96fb
-phone.contactdetails = \u806f\u7d61\u65b9\u5f0f
-phone.noinfo = \u7121\u53ef\u7528\u8cc7\u6599
-phone.viewfullprofile = \u67e5\u770b\u5b8c\u6574\u500b\u4eba\u8cc7\u6599
-phone.tips.mute = \u975c\u97f3\u901a\u8a71
-phone.mute = \u975c\u97f3
-phone.unmute = \u53d6\u6d88\u975c\u97f3
-phone.tips.hold = \u9019\u901a\u96fb\u8a71\u7b49\u5f85\u63a5\u807d
-phone.hold = \u901a\u8a71\u4fdd\u7559
-phone.onhold = \u7b49\u5019\u63a5\u807d
-phone.time = \u6642\u9593
-phone.tips.transfer = \u5c07\u9019\u901a\u96fb\u8a71\u8f49\u63a5
-phone.transfer = \u8f49\u63a5
-phone.transferring = \u8f49\u63a5\u4e2d
-phone.transfered = \u5df2\u8f49\u63a5
-phone.callstartedat = \u5728\u54ea\u88e1\u958b\u59cb\u547c\u53eb
-phone.callendedat = \u5728\u54ea\u88e1\u7d50\u675f\u547c\u53eb
-phone.onphonewith = \u548c\u8ab0\u901a\u8a71\u4e2d
-phone.callendedwith = \u548c\u8ab0\u901a\u8a71\u7d50\u675f
-phone.previousconversations = \u4e4b\u524d\u7684\u901a\u8a71
-phone.closeconfirm = \u96e2\u958b\u9019\u500b\u6703\u8b70\u5ba4\u5c07\u7d50\u675f\u901a\u8a71,\u7e7c\u7e8c\u55ce?
-phone.confirmation = \u78ba\u8a8d
-phone.all = \u5168\u90e8
-phone.allcalls = \u5168\u90e8\u547c\u53eb
-phone.tocall = \u547c\u53eb
-phone.enabled = \u555f\u52d5\u96fb\u8a71
-btn.add  	= \u65b0\u589e
-btn.edit 	= \u7de8\u8f2f
-btn.del  	= \u522a\u9664
-btn.dial	= \u64a5\u865f
-book.name 	= \u59d3\u540d
-book.number = \u96fb\u8a71\u865f\u78bc
-frame.title	= \u96fb\u8a71\u7c3f
-book.search = \u641c\u5c0b
-btn.ok      = \u78ba\u5b9a
-btn.cancel  = \u53d6\u6d88
-frame.add 	= "\u65b0\u589e\u9805\u76ee"
-frame.edit 	= "\u7de8\u8f2f\u9805\u76ee"
-book.exists		= "\u60a8\u60f3\u8981\u65b0\u589e\u7684\u96fb\u8a71\u7c3f\u5df2\u7d93\u5b58\u5728."
-book.noEntry	= "\u6c92\u6709\u5165\u53e3\u9078\u64c7!"
-book.fillFields = "\u8acb\u586b\u5beb\u6240\u6709\u5340\u57df"
-book.warning	= "\u6ce8\u610f"
-title.sip.codecs.title = \u7de8\u78bc\u89e3\u78bc\u5668
-codecs.select 	= < \u9078\u64c7
-codecs.unselect = \u53d6\u6d88\u9078\u64c7 >
-codecs.up		= \u5411\u4e0a ^
-codecs.down		= \u5411\u4e0b v
-codecs.audio.selected	= \u9078\u64c7\u7684\u97f3\u983b\u7de8\u78bc\u89e3\u78bc\u5668
+phone.starting = 開啟通話中...
+phone.failed = 開啟通話失敗
+phone.tryagain = 重試
+phone.call = 呼叫
+phone.voicemail = 語音郵件
+phone.viewcallhistory = 查看通話紀錄
+phone.placecall = 撥打電話
+phone.hangup = 結束通話
+phone.tips.hangup = 掛掉此通語音聊天
+phone.home = 首頁
+phone.work = 工作
+phone.cell = 元件
+phone.currentcall = 目前呼叫
+phone.incomingcall = 來電
+phone.noprevious = 沒有以前的對話.
+phone.callended = 通話結束
+phone.transferto = 轉接電話到
+phone.connected = 連接
+phone.lastcalled = 最後通話
+phone.never = 從未
+phone.duration = 持續時間
+phone.accept = 接受
+phone.reject = 拒絕
+phone.callback = 回覆電話
+phone.delete = 刪除
+phone.enternumber = 輸入要撥打的號碼.
+phone.invalidnumber = 無效的號碼
+phone.outgoingcall = 已撥出
+phone.callhistory = 通話紀錄
+phone.dialed = 已撥
+phone.dialedcalls = 已撥電話
+phone.received = 接聽
+phone.receivedcalls = 接聽電話
+phone.missed = 漏接
+phone.missedcalls = 漏接電話
+phone.unknown = 不明電話
+phone.placecallto = 已撥電話到
+phone.receivedcallfrom = 從哪裡接到電話
+phone.missedcallfrom = 從哪裡漏接電話
+phone.incomingcallfrom = 從哪裡來電
+phone.contactdetails = 聯絡方式
+phone.noinfo = 無可用資料
+phone.viewfullprofile = 查看完整個人資料
+phone.tips.mute = 靜音通話
+phone.mute = 靜音
+phone.unmute = 取消靜音
+phone.tips.hold = 這通電話等待接聽
+phone.hold = 通話保留
+phone.onhold = 等候接聽
+phone.time = 時間
+phone.tips.transfer = 將這通電話轉接
+phone.transfer = 轉接
+phone.transferring = 轉接中
+phone.transfered = 已轉接
+phone.callstartedat = 在哪裡開始呼叫
+phone.callendedat = 在哪裡結束呼叫
+phone.onphonewith = 和誰通話中
+phone.callendedwith = 和誰通話結束
+phone.previousconversations = 之前的通話
+phone.closeconfirm = 離開這個會議室將結束通話,繼續嗎?
+phone.confirmation = 確認
+phone.all = 全部
+phone.allcalls = 全部呼叫
+phone.tocall = 呼叫
+phone.enabled = 啟動電話
+btn.add  	= 新增
+btn.edit 	= 編輯
+btn.del  	= 刪除
+btn.dial	= 撥號
+book.name 	= 姓名
+book.number = 電話號碼
+frame.title	= 電話簿
+book.search = 搜尋
+btn.ok      = 確定
+btn.cancel  = 取消
+frame.add 	= "新增項目"
+frame.edit 	= "編輯項目"
+book.exists		= "您想要新增的電話簿已經存在."
+book.noEntry	= "沒有入口選擇!"
+book.fillFields = "請填寫所有區域"
+book.warning	= "注意"
+title.sip.codecs.title = 編碼解碼器
+codecs.select 	= < 選擇
+codecs.unselect = 取消選擇 >
+codecs.up		= 向上 ^
+codecs.down		= 向下 v
+codecs.audio.selected	= 選擇的音頻編碼解碼器
