--- a/plugins/battleships/src/main/resources/i18n/battleships_i18n_lt.properties
+++ b/plugins/battleships/src/main/resources/i18n/battleships_i18n_lt.properties
@@ -4,9 +4,9 @@
 ###########################
 # translation by wroot
 
-title = J\u016bros m\u016b\u0161is
-versus = J\u016bros m\u016b\u0161is prie\u0161 {0}
-request = J\u016bs u\u017eklaus\u0117t J\u016bros m\u016b\u0161is \u017eaidimo
-has.request = {0} u\u017eklaus\u0117 J\u016bros m\u016b\u0161is \u017eaidimo
-accepted = {0} pri\u0117m\u0117 pakvietim\u0105
-declined = {0} atmet\u0117 pakvietim\u0105
+title = Jūros mūšis
+versus = Jūros mūšis prieš {0}
+request = Jūs užklausėt Jūros mūšis žaidimo
+has.request = {0} užklausė Jūros mūšis žaidimo
+accepted = {0} priėmė pakvietimą
+declined = {0} atmetė pakvietimą
