--- a/plugins/flashing/src/main/resources/i18n/flashing_i18n_zh_TW.properties
+++ b/plugins/flashing/src/main/resources/i18n/flashing_i18n_zh_TW.properties
@@ -1,6 +1,6 @@
-title.flashing = \u5de5\u5177\u5217\u9583\u52d5
+title.flashing = 工具列閃動
 
-flashing.enable = \u555f\u52d5\u5de5\u5177\u5217\u9583\u52d5
-flashing.type = \u9583\u52d5\u985e\u578b
-flashing.type.continuous = \u6301\u7e8c\u9583\u52d5
-flashing.type.temporary = \u81e8\u6642\u9583\u52d5 
+flashing.enable = 啟動工具列閃動
+flashing.type = 閃動類型
+flashing.type.continuous = 持續閃動
+flashing.type.temporary = 臨時閃動 
