--- a/plugins/jingle/src/main/resources/i18n/jingle_i18n_lt.properties
+++ b/plugins/jingle/src/main/resources/i18n/jingle_i18n_lt.properties
@@ -2,11 +2,11 @@ button.accept = Priimti
 button.reject = Atmesti
 
 label.voice.request.from = Jums skambina ...
-label.mute.call = U\u017etildyti \u0161\u012f skambut\u012f.
-label.computer.to.computer = I\u0161 kompiuterio \u012f kompiuter\u012f
+label.mute.call = Užtildyti šį skambutį.
+label.computer.to.computer = Iš kompiuterio į kompiuterį
 label.mute = Nutildyti
-label.unmute = I\u0161jungti nutildym\u0105
-label.establishing.call = Lukterkite, u\u017emezgamas ry\u0161ys...
+label.unmute = Išjungti nutildymą
+label.establishing.call = Lukterkite, užmezgamas ryšys...
 label.outgoing.voicechat = Skambutis pokalbiui balsu su abonentu {0}
 label.call.ended = Pokalbis baigtas.
 label.call.transfer = Skambutis peradresuotas abonentui {0}
