--- a/plugins/jingle/src/main/resources/i18n/jingle_i18n_pl.properties
+++ b/plugins/jingle/src/main/resources/i18n/jingle_i18n_pl.properties
@@ -1,12 +1,12 @@
 button.accept = Akceptuj
-button.reject = Odrzu\u0107
+button.reject = Odrzuć
 
-label.voice.request.from = Pro\u015bba o rozmow\u0119 g\u0142osow\u0105 od ...
-label.mute.call = Wycisz to po\u0142\u0105czenie.
-label.computer.to.computer = Po\u0142\u0105czenie komputer-komputer
+label.voice.request.from = Prośba o rozmowę głosową od ...
+label.mute.call = Wycisz to połączenie.
+label.computer.to.computer = Połączenie komputer-komputer
 label.mute = Wycisz
-label.unmute = W\u0142\u0105cz g\u0142os
-label.establishing.call = Ustanawianie po\u0142\u0105czenia. Prosz\u0119 czeka\u0107...
-label.outgoing.voicechat = Wychodz\u0105ca rozmowa g\u0142osowa do {0}
-label.call.ended = Po\u0142\u0105czenie zako\u0144czone.
-label.call.transfer = Po\u0142\u0105czenie przekazane do {0}
+label.unmute = Włącz głos
+label.establishing.call = Ustanawianie połączenia. Proszę czekać...
+label.outgoing.voicechat = Wychodząca rozmowa głosowa do {0}
+label.call.ended = Połączenie zakończone.
+label.call.transfer = Połączenie przekazane do {0}
