--- a/plugins/jingle/src/main/resources/i18n/jingle_i18n_zh_TW.properties
+++ b/plugins/jingle/src/main/resources/i18n/jingle_i18n_zh_TW.properties
@@ -1,12 +1,12 @@
-button.accept = \u63a5\u53d7
-button.reject = \u62d2\u7d55
+button.accept = 接受
+button.reject = 拒絕
 
-label.voice.request.from = \u4f86\u81ea ... \u8a9e\u97f3\u804a\u5929\u8acb\u6c42
-label.mute.call = \u901a\u8a71\u975c\u97f3.
-label.computer.to.computer = \u96fb\u8166\u5c0d\u96fb\u8166
-label.mute = \u975c\u97f3
-label.unmute = \u89e3\u9664\u975c\u97f3
-label.establishing.call = \u5efa\u7acb\u8a9e\u97f3\u804a\u5929. \u8acb\u7a0d\u5019...
-label.outgoing.voicechat = \u5373\u5c07\u7d50\u675f\u7684\u8a9e\u97f3\u804a\u5929 {0}
-label.call.ended = \u901a\u8a71\u7d50\u675f.
-label.call.transfer = \u901a\u8a71\u8f49\u63a5\u5230 {0}
+label.voice.request.from = 來自 ... 語音聊天請求
+label.mute.call = 通話靜音.
+label.computer.to.computer = 電腦對電腦
+label.mute = 靜音
+label.unmute = 解除靜音
+label.establishing.call = 建立語音聊天. 請稍候...
+label.outgoing.voicechat = 即將結束的語音聊天 {0}
+label.call.ended = 通話結束.
+label.call.transfer = 通話轉接到 {0}
