--- a/plugins/otr/src/main/resources/i18n/otrplugin_i18n_lt.properties
+++ b/plugins/otr/src/main/resources/i18n/otrplugin_i18n_lt.properties
@@ -1,30 +1,30 @@
 
 # OTR language file
 
-otr.title = Konfidencialus (OTR) susira\u0161in\u0117jimas
-otr.list.entry =  OTR susira\u0161in\u0117jimas
+otr.title = Konfidencialus (OTR) susirašinėjimas
+otr.list.entry =  OTR susirašinėjimas
 otr.settings = OTR nustatymai
-otr.enable = OTR \u012fjungtas
+otr.enable = OTR įjungtas
 current.priv.key = Einamas privatus raktas:
-renew.current.key = Generuoti nauj\u0105 rakt\u0105
-otr.close.session.on.window.close = U\u017ebaigti OTR sesij\u0105, kai u\u017edaromas pokalbio langas
-otr.close.session.on.contact.off = U\u017ebaigti OTR sesij\u0105, kai adresatas atsijungia
+renew.current.key = Generuoti naują raktą
+otr.close.session.on.window.close = Užbaigti OTR sesiją, kai uždaromas pokalbio langas
+otr.close.session.on.contact.off = Užbaigti OTR sesiją, kai adresatas atsijungia
 otr.key.not.verified.title = Raktas nepatikrintas
 otr.question.verify = Patikrinti?
-otr.key.not.verified.text = Raktas n\u0117ra patikrintas!
-otr.start.session.with = OTR u\u017e\u0161ifruota sesija su {0}
-otr.not.enabled = J\u016bs gavote OTR u\u017eklaus\u0105. J\u016bs turite \u012fjungti OTR nustatymuose.
-otr.chat.is.still.encrypted = \u0160is pokalbis vis dar yra u\u017e\u0161ifruotas. 
-otr.chat.button.tooltip = Pokalbio \u0161ifravimas
+otr.key.not.verified.text = Raktas nėra patikrintas!
+otr.start.session.with = OTR užšifruota sesija su {0}
+otr.not.enabled = Jūs gavote OTR užklausą. Jūs turite įjungti OTR nustatymuose.
+otr.chat.is.still.encrypted = Šis pokalbis vis dar yra užšifruotas. 
+otr.chat.button.tooltip = Pokalbio šifravimas
 #Table Columns
 otr.table.jid = Vartotojo JID
-otr.table.public.key = Vie\u0161as raktas
+otr.table.public.key = Viešas raktas
 otr.key.verified  = Patikrintas
 
 
 #OTR Panel in Chat
 otr.retry = Pakartoti
-otr.try.to.connect.for.seconds = Bandoma u\u017emegzti OTR sesij\u0105. {0} s liko...
-otr.failed.to.establish = Nepavyko u\u017emegzti OTR sesijos. Baig\u0117si laikas.
-otr.successfull = OTR sesija s\u0117kmingai u\u017emegzta. \u017Dinut\u0117s bus u\u017e\u0161ifruotos.
-otr.disconnected = OTR sesija uzdaryta. \u017Dinut\u0117s daugiau nebus \u0161ifruojamos.
+otr.try.to.connect.for.seconds = Bandoma užmegzti OTR sesiją. {0} s liko...
+otr.failed.to.establish = Nepavyko užmegzti OTR sesijos. Baigėsi laikas.
+otr.successfull = OTR sesija sėkmingai užmegzta. Žinutės bus užšifruotos.
+otr.disconnected = OTR sesija uzdaryta. Žinutės daugiau nebus šifruojamos.
