--- a/plugins/roar/src/main/resources/i18n/roar_i18n_fr.properties
+++ b/plugins/roar/src/main/resources/i18n/roar_i18n_fr.properties
@@ -1,12 +1,12 @@
 # Roar language file
 
-roar.settings = Param\u00E8tres Roar
-roar.enabled = Popups activ\u00E9s
-roar.duration = Dur\u00E9e en ms (0 = infini):
-roar.amount = Popups maximals affich\u00E9s \u00E0 l'\u00E9cran (0 = infini):
-roar.location = Changer l'emplacement de d\u00E9part du popup (n\u00E9cessite un red\u00E9marrage)
-roar.display.topright = En haut \u00E0 droite
-roar.display.bottomright = En bas \u00E0 droite
+roar.settings = Paramètres Roar
+roar.enabled = Popups activés
+roar.duration = Durée en ms (0 = infini):
+roar.amount = Popups maximals affichés à l'écran (0 = infini):
+roar.location = Changer l'emplacement de départ du popup (nécessite un redémarrage)
+roar.display.topright = En haut à droite
+roar.display.bottomright = En bas à droite
 roar.background = Couleur de fond
-roar.header = Couleur de l'ent\u00EAte
+roar.header = Couleur de l'entête
 roar.text = Couleur du texte
