--- a/plugins/spelling/src/main/resources/i18n/spellchecker_i18n_lt.properties
+++ b/plugins/spelling/src/main/resources/i18n/spellchecker_i18n_lt.properties
@@ -1,9 +1,9 @@
-title.spellchecker = Ra\u0161ybos tikrinimas
+title.spellchecker = Rašybos tikrinimas
 
-preference.spellcheckingEnabled = \u012ejungti ra\u0161ybos tikrinim\u0105
-preference.autoSpellcheckingEnabled = \u012ejungti automatin\u012f ra\u0161ybos tikrinim\u0105
+preference.spellcheckingEnabled = Įjungti rašybos tikrinimą
+preference.autoSpellcheckingEnabled = Įjungti automatinį rašybos tikrinimą
 preference.language = &Kalba
-preference.ignore.uppercasedword = &Neskirti did\u017ei\u0173j\u0173 ir ma\u017e\u0173j\u0173 raid\u017ei\u0173
-preference.show.langauage.in.chat.windows = Leisti pasirinkti kalb\u0105 pokalbio lange
-dialog.no.mistakes = Nerasta ra\u0161ybos klaid\u0173
-button.check.spelling = Patikrint ra\u0161yb\u0105
+preference.ignore.uppercasedword = &Neskirti didžiųjų ir mažųjų raidžių
+preference.show.langauage.in.chat.windows = Leisti pasirinkti kalbą pokalbio lange
+dialog.no.mistakes = Nerasta rašybos klaidų
+button.check.spelling = Patikrint rašybą
